# hyperdrive

./: .dockerignore  .env_template  .gitignore  .gitmodules  .prettierignore  .prettierrc  .solhint.json  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.nginx  LICENSE  Makefile  README.md  STYLE_GUIDE.md  addresses.json  amm-math.md  ape-config.yaml  cSpell.json  codecov.yml  constructor_args  deployments.json  docker-compose.yaml  flake.nix  fork.Dockerfile  foundry.toml  hardhat.config.anvil.ts  hardhat.config.base.ts  hardhat.config.clone.ts  hardhat.config.fork.ts  hardhat.config.gnosis.ts  hardhat.config.linea.ts  hardhat.config.mainnet.ts  hardhat.config.mainnet_fork.ts  hardhat.config.maintain_rate.ts  hardhat.config.sepolia.ts  hardhat.config.ts  migrate.sh  nginx.conf  (+15 more)
.github/ISSUE_TEMPLATE/: crash-report.md
.github/workflows/: benchmark.yml  build.yml  build_hyperdrivetypes.yml  build_hypertypes.yml  build_python_wheels.yml  build_types_on_change.yml  build_types_on_tag.yml  check_diff.yaml  codegen_test.yml  coverage.yml  devnet_docker.yml  docker.yml  fuzznet_docker.yml  lint.yml  mainnet_fork_docker.yml  (+8 more)
.husky/: pre-commit
.scripts/: test_morphoblue_usde_dai_hyperdrive.py
artifacts/: artifacts.d.ts
certora/: Makefile  README.md  applyHarness.patch
codegen/: CODEOWNERS  README.md  pyproject.toml
codegen/example/: config.yaml
codegen/hyperdrive_codegen/: codegen.py  config.py  file.py  jinja.py  main.py  templates.py
codegen/templates/deployers/: HyperdriveCoreDeployer.sol.jinja  HyperdriveDeployerCoordinator.sol.jinja  Target0Deployer.sol.jinja  Target1Deployer.sol.jinja  Target2Deployer.sol.jinja  Target3Deployer.sol.jinja  Target4Deployer.sol.jinja
codegen/templates/instances/: Base.sol.jinja  Conversions.sol.jinja  Hyperdrive.sol.jinja  Target0.sol.jinja  Target1.sol.jinja  Target2.sol.jinja  Target3.sol.jinja  Target4.sol.jinja
codegen/templates/interfaces/: IHyperdrive.sol.jinja  IYieldSource.sol.jinja
codegen/templates/tests/: InstanceTest.t.sol.jinja  Test.t.sol.jinja
codegen/test/: test.sh  test_not_payable_and_not_as_base_allowed.yaml
contracts/: AaveYieldSource.sol  BondWrapper.sol  ERC20Forwarder.sol  ForwarderFactory.sol  Hyperdrive.sol  HyperdriveBase.sol  HyperdriveLP.sol  HyperdriveLong.sol  HyperdriveShort.sol  MultiToken.sol  StableWrapper.sol
crates/fixed-point/: Cargo.toml
crates/fixed-point-macros/: Cargo.toml
crates/fixed-point-macros/src/: lib.rs
crates/fixed-point-macros/tests/: macro_tests.rs
crates/fixed-point/src/: lib.rs
crates/hyperdrive-math/: Cargo.toml
crates/hyperdrive-math-py/: Cargo.toml  pyproject.toml  setup.py
crates/hyperdrive-math-py/python/hyperdrive_math_py/: __init__.py  hyperdrive_math_py.pyi  types.py
crates/hyperdrive-math-py/src/: lib.rs
crates/hyperdrive-math/src/: hyperdrive_math.rs  lib.rs  long.rs  lp.rs  pylib.rs  short.rs  utils.rs  yield_space.rs
crates/hyperdrive-math/src/hyperdrive_math/: long.rs  mod.rs  short.rs
crates/hyperdrive-math/src/long/: close.rs  fees.rs  max.rs  mod.rs  open.rs  targeted.rs
crates/hyperdrive-math/src/short/: close.rs  fees.rs  max.rs  mod.rs  open.rs
crates/hyperdrive-math/tests/: integration_tests.rs
crates/hyperdrive-wrappers/: Cargo.toml  build.rs
crates/hyperdrive-wrappers/src/: lib.rs
crates/hyperwasm/: Cargo.toml  build.sh
crates/hyperwasm/example/: hyperwasm-0.0.0.tgz  index.js  package-lock.json  package.json
crates/hyperwasm/src/: lib.rs
crates/test-utils/: Cargo.toml  README.md  build.rs  config.toml
crates/test-utils/examples/: dev_chain.rs  max_short.rs  test_chain.rs  test_chain_load_crash.rs  test_chain_new.rs
crates/test-utils/src/: agent.rs  constants.rs  crash_reports.rs  dev_chain.rs  fixed_point.rs  hyperdrive.rs  infra.rs  lib.rs  test_chain.rs
crates/test-utils/src/chain/: deploy.rs  dev_chain.rs  etch.rs  mod.rs  test_chain.rs
deploy/: factory.ts  sepolia-factory.json
docker/: run_migrations.sh
docs/: hyperdrive-protocol.md
migrations/: AaveFixedBorrowAction.s.sol  Faucet.s.sol  HyperdriveInitialize.s.sol  MakerDsrHyperdrive.s.sol  MockAave.s.sol  MockHyperdrive.s.sol
notebook/: apeworx.ipynb
python/: contract_size.py  gas_benchmarks.py  test_hyperdrivetypes.py
python-fuzz/: README.md  fuzz_mint_burn.py  requirements.txt
python/hyperdrivetypes/: README.md  __init__.py  prerequisite.txt  pyproject.toml
python/hyperdrivetypes/hyperdrivetypes/: __init__.py  fixedpoint_types.py
python/hyperdrivetypes/hyperdrivetypes/fixedpoint_types/: __init__.py
python/hypertypes/: pyproject.toml
python_test/: requirements.txt
script/: CloseLong.s.sol  Devnet.s.sol  DevnetMigration.s.sol  DevnetRepro.s.sol  DevnetSmokeTest.s.sol  DsrHyperdrive.s.sol  Faucet.s.sol  GetBytecode.s.sol  Hyperdrive.s.sol  HyperdriveDevnet.s.sol  HyperdriveInitialize.s.sol  InspectPool.s.sol  InspectRegistry.s.sol  MockHyperdrive.s.sol  MockHyperdriveMath.s.sol  OpenLong.s.sol  PoolDeployment.s.sol  PoolInfoHelper.s.sol  SmokeTest.s.sol  StethHyperdrive.s.sol  TestnetDeployment.s.sol  TokenUpdates.s.sol  UpdateRegistry.s.sol  VerifierHelper.s.sol  index.ts  verify-hyperdrive.sample.env  verify-hyperdrive.sh  verify.sample.env  verify.sh
scripts/: bootstrap-fork.sh  build-hyperdrivetypes-wheel.sh  build-hypertypes-wheels.sh  cli.ts  configure-clone.sh  contract_size.py  coverage.sh  debug.sh  deploy-clone.sh  deploy-erc4626-coordinator.ts  deploy-factory.ts  deploy-fork.sh  deploy-reth-coordinator.ts  deploy-steth-coordinator.ts  deploy.sh  fork-entrypoint.sh  format-devnet-addresses.sh  fund-anvil-accounts-fork.sh  fund-fork-accounts.sh  gas_benchmarks.py  generate-deploy-config.sh  pause.sh  set-hyperdrivetypes-version.sh  verify-hyperdrivetypes-version.sh
src/: Hyperdrive.sol
tasks/: README.md  get-rate.ts  index.ts  market-state.ts  pause.ts
test/: FixedPointMath.t.sol  Hyperdrive.t.sol  HyperdriveMath.t.sol  MultiToken.t.sol  Test.sol  YieldSpaceMath.t.sol
test/rust/: Cargo.toml  idle_invariant_tests.rs  state_dump.json  tests.rs
test/rust/tests/: simple_tests.rs  tests.rs
(+1793 files in other folders)
