[package]
name = "fixed-point"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]

hyperdrive-wrappers = { version = "0.1", path = "../hyperdrive-wrappers" }
