[package]
name = "fixed-point"
version = "0.1.0"
edition = "2021"

[dependencies]

# External dependencies
ethers = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

# Workspace dependencies
fixed-point-macros = { version = "0.1", path = "../fixed-point-macros" }

[dev-dependencies]

# Workspace dependencies
hyperdrive-wrappers = { version = "0.1", path = "../hyperdrive-wrappers" }
