[project]
name = "hyperdrive_math_py"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.pylint]
extension-pkg-allow-list="hyperdrive-math-py"

[tool.setuptools.packages.find]
where = ["python", "src"]
