[package]

name = "hyperdrive-math"
version = "0.1.0"
edition = "2021"

[dependencies]

# External dependencies
ethers = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

# Workspace dependencies
fixed-point = { version = "0.1.0", path = "../fixed-point" }
fixed-point-macros = { version = "0.1.0", path = "../fixed-point-macros" }
hyperdrive-wrappers = { version = "0.1.0", path = "../hyperdrive-wrappers" }
