[package]
name = "hyperdrive-wrappers"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = "2.0"
eyre = "0.6.8"
fixed-point = { path = "../fixed-point" }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

[build-dependencies]

ethers = "2.0"
ethers-solc = "2.0"
eyre = "0.6.8"
heck = "0.4"
