[package]
name = "hyperdrive-wrappers"
version = "0.1.0"
edition = "2021"

# Builds the Solidity contract wrappers.
build = "build.rs"

[dependencies]

# External dependencies
ethers = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

# Workspace dependencies
fixed-point = { path = "../fixed-point" }

[build-dependencies]

# External dependencies
ethers = "2.0.8"
ethers-solc = "2.0.8"
eyre = "0.6.8"
heck = "0.4.1"
tokio = { version = "1", features = ["full"] }
