[package]
name = "hyperwasm"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ethers = { version = "2.0", features = ["abigen", "ws"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.0"

wasm-bindgen-futures = "0.4.36"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
hex = { package = "const-hex", version = "1.6", features = ["hex"] }

fixed-point = { path = "../fixed-point" }
# fixed-point-macros = { path = "../fixed-point-macros" }
hyperdrive-math = { path = "../hyperdrive-math" }
hyperdrive-wrappers = { path = "../hyperdrive-wrappers" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

web-sys = { version = "0.3.63", features = ["console"] }

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
