[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = "2.0.8"
eyre = "0.6.8"
fixed-point = { path = "../fixed-point" }
fixed-point-macros = { path = "../fixed-point-macros" }
hyperdrive-addresses = { path = "../hyperdrive-addresses" }
hyperdrive-math = { path = "../hyperdrive-math" }
hyperdrive-wrappers = { path = "../hyperdrive-wrappers" }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
