[project]
name = "hypertypes"
version = "0.0.1"
# Authors are the current, primary stewards of the repo
# contributors can be found on github
authors = [
    {name = "Dylan Paiton", email = "dylan@delv.tech" },
    {name = "Matthew Brown", email = "matt@delv.tech"  },
]
description = "Agent interface for on-chain protocols."
readme = "README.md"
requires-python = ">=3.10, <=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
]

dependencies = ["pypechain"]
