[package]

name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]

ethers = "2.0"
eyre = "0.6.8"
fixed-point = { path = "../../crates/fixed-point" }
fixed-point-macros = { path = "../../crates/fixed-point-macros" }
hyperdrive-math = { path = "../../crates/hyperdrive-math" }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
test-utils = { path = "../../crates/test-utils" }

[[test]]

name = "tests"
path = "tests/tests.rs"
