[package]

name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]

name = "tests"
path = "tests/tests.rs"

[dev-dependencies]

# External dependencies.
ethers = "2.0"
eyre = "0.6.8"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

# Workspace dependencies.
fixed-point = { path = "../../crates/fixed-point" }
fixed-point-macros = { path = "../../crates/fixed-point-macros" }
hyperdrive-math = { path = "../../crates/hyperdrive-math" }
test-utils = { path = "../../crates/test-utils" }
